--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# Copy this file to .env and fill in your Odoo credentials
-ODOO_URL=http://localhost:9090
-ODOO_DB=nom_de_votre_base
-ODOO_USER=votre_utilisateur
-ODOO_PASSWORD=votre_mot_de_passe_ou_cle_api
+# Odoo Configuration
+# Note: Odoo connection settings are now configured through the web interface.
+# Go to Settings > Odoo Integration to enable and configure your Odoo connection.
+# This file is kept for backward compatibility reference only.
