--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ browser-use==0.5.11
 docker==7.1.0
 duckduckgo-search==6.1.12
 faiss-cpu==1.11.0
-fastmcp==2.3.4
 fasta2a==0.5.0
 flask[async]==3.0.3
 flask-basicauth==0.2.0
@@ -41,4 +40,6 @@ pdf2image==1.17.0
 crontab==1.0.1
 pathspec>=0.12.1
 psutil>=7.0.0
+fastmcp==0.3.0
+pydantic==1.10.12
 soundfile==0.13.1
