--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@
 # Note: Odoo connection settings are now configured through the web interface.
 # Go to Settings > Odoo Integration to enable and configure your Odoo connection.
 # This file is kept for backward compatibility reference only.
+
+# PowerPoint & PDF Generation
+# PPT_ENABLED=false
+# PPT_DEFAULT_FORMAT=pptx
+# PPT_DEFAULT_THEME=modern
+# PPT_CHART_LIBRARY=chartjs
+# PPT_ENABLE_PREVIEW=true
