--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,16 @@
 # PPT_DEFAULT_THEME=modern
 # PPT_CHART_LIBRARY=chartjs
 # PPT_ENABLE_PREVIEW=true
+
+# Authentication
+# Note: Le système utilise maintenant une base de données SQLite pour gérer les utilisateurs.
+# Le premier utilisateur admin sera créé automatiquement au démarrage avec ces credentials.
+# Après la première connexion, vous pouvez créer d'autres utilisateurs via l'interface d'administration.
+
+# Credentials du premier admin (utilisé uniquement lors de l'initialisation)
+AUTH_LOGIN=admin
+AUTH_PASSWORD=changeme
+
+# Rôles disponibles:
+# - admin: Accès complet (settings, memory, tous les chats, gestion des utilisateurs)
+# - user: Accès limité (uniquement ses propres chats, pas d'accès aux settings/memory)
